sketch of get shortest path.

--- a/Topo-Module/pom.xml
+++ b/Topo-Module/pom.xml
@@ -12,10 +12,10 @@
 	<description>topo module</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.yucfeng</groupId>
+		<artifactId>spf</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
