add link module

--- a/topo-web/src/main/resources/application.properties
+++ b/topo-web/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.redis.timeout=0
 # Neo4j
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=qwerasdf
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
